# asciivate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
notebooks/: asciivate.ipynb  logpolar.ipynb  process_image.ipynb
src/: asciivate.cpp  asciivate.cu
src/dataset/: dataset.cpp  dataset.hpp
